
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int ssl_conn ;
typedef int buf ;


 int BUFSIZE ;
 int exit (int) ;
 int printf (char*,int) ;
 int read_ssl_packet (int *,unsigned char*,int) ;

void get_server_error(ssl_conn* ssl)
{
 unsigned char buf[BUFSIZE];
 int len;

 if ((len = read_ssl_packet(ssl, buf, sizeof(buf))) > 0) {
  printf("get server finished: Expected SSL2 MT ERROR, got %x\n", (int)buf[0]);
  exit(1);
 }
}
