; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/unix/remote/extr_21671.c_get_server_error.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/unix/remote/extr_21671.c_get_server_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BUFSIZE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [53 x i8] c"get server finished: Expected SSL2 MT ERROR, got %x\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @get_server_error(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %6 = load i32, i32* @BUFSIZE, align 4
  %7 = zext i32 %6 to i64
  %8 = call i8* @llvm.stacksave()
  store i8* %8, i8** %3, align 8
  %9 = alloca i8, i64 %7, align 16
  store i64 %7, i64* %4, align 8
  %10 = load i32*, i32** %2, align 8
  %11 = trunc i64 %7 to i32
  %12 = call i32 @read_ssl_packet(i32* %10, i8* %9, i32 %11)
  store i32 %12, i32* %5, align 4
  %13 = icmp sgt i32 %12, 0
  br i1 %13, label %14, label %20

14:                                               ; preds = %1
  %15 = getelementptr inbounds i8, i8* %9, i64 0
  %16 = load i8, i8* %15, align 16
  %17 = zext i8 %16 to i32
  %18 = call i32 @printf(i8* getelementptr inbounds ([53 x i8], [53 x i8]* @.str, i64 0, i64 0), i32 %17)
  %19 = call i32 @exit(i32 1) #4
  unreachable

20:                                               ; preds = %1
  %21 = load i8*, i8** %3, align 8
  call void @llvm.stackrestore(i8* %21)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @read_ssl_packet(i32*, i8*, i32) #2

declare dso_local i32 @printf(i8*, i32) #2

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #3

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
